--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -26,14 +26,6 @@ body {
 	font-weight: normal;
 	font-style: normal;
 }
-@font-face {
-    font-family: 'five';
-    src: url('../fonts/five-font.ttf');
-	font-weight: normal;
-	font-style: normal;
-}
-
-
 #background {
 	background: url("../images/bg-page.jpg");
 	background-position:top center;
@@ -59,7 +51,7 @@ body {
 }
 #background #page #header a#logo img {
 	border:0;
-	margin-top:25px;
+	margin-top:40px;
 }
 /**-------------- Navigation style ---------------**/
 #background #page #header ul.navigation {
@@ -127,26 +119,27 @@ body {
 }
 #background #page #body .featured ul li h2 {
 	color:#ffffff;
-	font-family:'five';
-    font-weight:normal;
+	font-family: 'KreonBold';
+	font-weight:normal;
     margin-left:50px;
     margin:0;
 }
 #background #page #body .featured ul li h2 a {
 	color:#000000;
-    font-family: 'five';
+	font-family: 'KreonBold';
 	font-size:37px;
 	text-decoration:none;
 	font-weight:normal;
 }
 #background #page #body .featured ul li p {
 	color:#000000;
-	font-size:25px;
+	font-family: 'kreonlight';
+	font-size:30px;
 	line-height:40px;
 	text-align:justify;
-    margin:20px;
-    margin-top:10px;
-    
+    margin:0;
+    margin-top:20px;
+    font-weight:bold;
 }
 #background #page #body .featured ul li p a {
 	color:#fbfbfb;
@@ -388,8 +381,6 @@ body {
 	width:430px;
 	padding:0 27px 0 0;
 }
-
-
 #background #page #body ul#about li.first h2 {
 	font-family: Georgia;
 	color:#787979;
@@ -397,8 +388,6 @@ body {
 	margin:0;
 	line-height:24px;
 }
-
-
 #background #page #body ul#about li.first h2 a {
 	font-family: Georgia;
 	color:#787979;
