--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div id="background">
 		<div id="page">
-			<div id="header"> <a href="index.html" id="logo"><img src="static/images/Culture-City_logo.png" width="350" height="70" alt="Chronokeep Website Template"></a>
+			<div id="header"> <a href="index.html" id="logo"><img src="static/images/logo-Culture_City.png" width="295" height="55" alt="Chronokeep Website Template"></a>
 				<ul class="navigation">
 					<li>
 						<a class="activeв" href="index.html">Главная</a>
@@ -37,7 +37,7 @@
 				<div class="featured">
 					<ul>
 						<li>
-							<h2><a href="index.html">Культурный город- <br>&emsp;<span style='font-size:28px;'>город который делают люди</span></a></h2>
+							<h2><a href="index.html">Lorem Ipsum Dolor Sit</a></h2>
 							<p>
 								This website template has been designed by Free Website Template<a href="http://www.freewebsitetemplates.com"></a> for you, for free. You can replace all this text with your own text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
 							</p>
@@ -50,8 +50,7 @@
 						<div class="body">
 							<ul class="article">
 								<li class="first">
-									<a href="index.html">
-                                    <p style="text-align:center;"><img src="static/images/create.png" width="100" height="100" alt="Chronokeep Website Template"></p></a>
+									<a href="index.html"><img src="static/images/create.jpg" width="256" height="166" alt="Chronokeep Website Template"></a>
 									<h2><a href="index.html">Создать статью</a></h2>
 									<p>
 										Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim.
@@ -59,8 +58,7 @@
 									<a href="index.html" class="readmore">Read More</a>
 								</li>
 								<li>
-									<a href="index.html">
-                                    <p style="text-align:center;"><img src="static/images/partner.png" width="100" height="100" alt="Chronokeep Website Template"></a>
+									<a href="index.html"><img src="static/images/partner.jpg" width="256" height="166" alt="Chronokeep Website Template"></a>
 									<h2><a href="index.html">Мы сотрудничаем</a></h2>
 									<p>
 										Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim.
@@ -68,8 +66,7 @@
 									<a href="index.html" class="readmore">Read More</a>
 								</li>
 								<li class="last">
-									<a href="index.html">
-                                    <p style="text-align:center;"><img src="static/images/read.png" width="100" height="100" alt="Chronokeep Website Template"></a>
+									<a href="index.html"><img src="static/images/read.jpg" width="256" height="166" alt="Chronokeep Website Template"></a>
 									<h2><a href="index.html">Читать статью</a></h2>
 									<p>
 										Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim.
