add bg-page backround_header, add text in public text)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,8 @@
                         <li>
                             <h2><a href="index.html">Культурный город - <br>&emsp;<span style='font-size:25px'>город, который делают люди</span></a></h2>
                             <p>
-                                This website template has been designed by Free Website Templates <a href="http://www.freewebsitetemplates.com"></a> for you, for free. You can replace all this text with your own text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+                                Напишите свою статью, отправьте ее в "Культурный город" и мы опубликуем ее на улицах города. Или в метро.
+                                Или в общественном транспорте. Ее прочитает Санкт-Петербург.
                             </p>
                             <!--<a href="index.html" class="download">&nbsp;</a> <a href="index.html" class="buy">&nbsp;</a> -->
                         </li>
@@ -51,4 +52,3 @@
                 </div>
             </div>
 {% endblock %}
->>>>>>> efbf9e98705e392167c8aba31aac086719238621
