first fonts correction

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,10 @@
     </div>
   </div>
 
-{{block content}}
+{% block content %} 
+
+{% endblock %}
+
 
   <div class="block">
     <div class="footer">
