--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,9 +23,9 @@
 <div class="container">
   <div class="top">
     <h4>Great New Deals in Shopping Festival this year. Get Discount upto 70%</h4>
-    <a href="#" class="btn mini yellow">Try It Now</a> </div>
+    <!--<a href="#" class="btn mini yellow">Try It Now</a> --> </div>
   <div class="header">
-    <div class="logo"> <img src="images/logo1.png" alt=""></div>
+    <div class="logo"> <img src="static/images/logo1.png" alt=""></div>
     <div class="contact">
       <h5><span class="phone"></span>Contact : 980.56.33.0</h5>
       <div class="social">
