--- a/app/static/css/mainfonts.css
+++ b/app/static/css/mainfonts.css
@@ -1,12 +1,9 @@
 @font-face {
   font-family: 'SlotSSI';
-  /*src: url('fonts/slot_ssi.eot?v=3.0.1');*/
-/*  src: url('fonts/slot_ssi?#iefix&v=3.0.1') format('embedded-opentype'),*/
-/*    url('fonts/slot_ssi.woff?v=3.0.1') format('woff'),
-    url('fonts/slot_ssi.ttf?v=3.0.1') format('truetype'); */
-  src:  url('fonts/slot_ssi.eot') format('woff');,
-  src:  url('fonts/slot_ssi.woff') format('woff'),
-  src:  url('fonts/slot_ssi.ttf') format('truetype');
+  src: url('../fonts/slot_ssi.eot?v=3.0.1');
+  src: url('../fonts/slot_ssi?#iefix&v=3.0.1') format('embedded-opentype'),
+    url('../fonts/slot_ssi.woff?v=3.0.1') format('woff'),
+    url('../fonts/slot_ssi.ttf?v=3.0.1') format('truetype'); 
   font-weight: normal;
   font-style: normal;
 }
