--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,65 @@
 {% extends "base.html" %}
 {% block content %}
-<br>
-<br>
-<h1>THIS IS INDEX.HTML</H1>
+  <div class="main">
+      <div class="featured">
+        <div class="vendor">
+          <div class="flexslider mainslider">
+            <img src="/static/images/waw1.png" alt="">
+            <!--<ul>
+              <li class="image"><img src="/static/images/waw.png" alt=""></li>
+              <li class="image"><img src="/static/images/waw1.png" alt=""></li>
+              <li class="image"><a href="#"><img src="/static/images/waw2.png" alt=""></a></li>
+            </ul>-->
+        </div>
+      </div>
+    </div>
+   <div class="main-signup">
+     <h2>Культурный город - </h2>
+     <h4>&emsp; - город, который делают люди</h4>
+     <p>Напишите свою стать, отправьте ее в "Культурный город" и ее прочитает Санкт-Петербург</p>
+     <a href="#" class="btn red">Написать</a>
+     <p class="sidetext">Ознакомится с правилами написания статей можно в разделе <span>"Написать"</span></p>
+   </div>
+  </div>
+  <div class="tagline">
+    <h1>Давайте делать город лучше</h1>
+    <p>Когда вы делаете что то для других, от этого становится лучше вам</p>
+    <p>Когда другие делают что то для вас - от этого становится лучше вам. Давайте делать для других, и другие начнут делать для вас</p>
+  </div>
+    <div class="block">
+    <div class="feature-box">
+      <div class="feature">
+        <img src="/static/images/icon1.png" alt=""></img>
+        <h3>Написать статью</h3>
+        <p>Напишите статью, отправьте ее в "Культурный город" и ее увидит Санкт-Петербург</p>
+      </div>
+      <div class="feature">
+        <img src="/static/images/icon2.png" alt=""></img>
+        <h3>Мы сотрудничаем</h3>
+        <p>Проект "Культурный город" поддерживают многие. Наши проспекты расположены везде</p>
+      </div>
+      <div class="feature">
+        <img src="/static/images/icon3.png" alt=""></img>
+        <h3>Читать Статьи</h3>
+        <p>Прочитайте статьи, которые написали соотечественники. Это интересно</p>
+      </div>
+      <div class="feature">
+        <img src="/static/images/icon4.png" alt=""></img>
+        <h3>Наши контакты</h3>
+        <p>Вы посмотрели сайт и у вас остались вопросы? Пишите нам и мы с радостью вам ответим</p>
+      </div>
+    </div>
+    </div>
+  <div class="how">
+    <h1>Как работает проект?</h1>
+    <img src="/static/images/waw1.png" alt=""></img>
+  </div>
+  
+
+
+
+
+
+
 
 {% endblock %}
