--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,19 +22,20 @@
 <body>
 <div class="container">
   <div class="top">
-    <h4>Great New Deals in Shopping Festival this year. Get Discount upto 70%</h4>
-    <!--<a href="#" class="btn mini yellow">Try It Now</a> --> </div>
+<!--    <h4>Great New Deals in Shopping Festival this year. Get Discount upto 70%</h4> -->
+    <h4>Культур мультур барабульдур кана мене ваза бла-бла. Такие дела.</h4>
+    <a class="btn mini">Владимир Ленин</a></div>
   <div class="header">
-    <div class="logo"> <img src="static/images/logo1.png" alt=""></div>
+    <div class="logo"> <img src="static/images/color-logo-Culture_City.png" alt=""></div>
     <div class="contact">
-      <h5><span class="phone"></span>Contact : 980.56.33.0</h5>
+     <!-- <h5><span class="phone"></span>Contact : 980.56.33.0</h5> -->
       <div class="social">
         <ul>
-          <li><i class="icon-facebook-sign icon-2x"></i></li>
-          <li><i class="icon-twitter-sign icon-2x"></i></li>
-          <li><i class="icon-linkedin-sign icon-2x"></i></li>
-          <li><i class="icon-pinterest-sign icon-2x"></i></li>
-          <li><i class="icon-google-plus-sign icon-2x"></i></li>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">О проекте</a></li>
+          <li><a href="#">Создать</a></li>
+          <li><a href="#">Читать</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </div>
     </div>
@@ -59,11 +60,6 @@
       </div>
     </div>
   </div>
-  <section>
-    <div class="space">
-      <p>space</p>
-    </div>
-  </section>
 </div>
 </body
 </html>
