add partners block

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,6 @@
     <p>Когда другие делают что то для вас - от этого становится лучше вам. Давайте делать для других, и другие начнут делать для вас</p>
   </div>
     <div class="block">
-    <div class="feature-box">
       <div class="feature">
         <img src="/static/images/icon1.png" alt=""></img>
         <h3>Написать статью</h3>
@@ -35,8 +34,8 @@
       </div>
       <div class="feature">
         <img src="/static/images/icon2.png" alt=""></img>
-        <h3>Мы сотрудничаем</h3>
-        <p>Проект "Культурный город" поддерживают многие. Наши проспекты расположены везде</p>
+        <h3>О проекте</h3>
+        <p>Как функционирует проект, основые его состоявляющей деятельности</p>
       </div>
       <div class="feature">
         <img src="/static/images/icon3.png" alt=""></img>
@@ -49,10 +48,26 @@
         <p>Вы посмотрели сайт и у вас остались вопросы? Пишите нам и мы с радостью вам ответим</p>
       </div>
     </div>
-    </div>
-  <div class="how">
-    <h1>Как работает проект?</h1>
-    <img src="/static/images/waw1.png" alt=""></img>
+  <div class="partners">
+    <h1>Наши партнеры</h1>
+      <div class="partners-name">
+        <img src="/static/images/icon1.png" alt=""></img>
+        <h3>написать статью</h3>
+        <p>напишите статью, отправьте ее в "культурный город" и ее увидит санкт-петербург</p>
+      </div>
+  
+      <div class="partners-name">
+        <img src="/static/images/icon1.png" alt=""></img>
+        <h3>написать статью</h3>
+        <p>напишите статью, отправьте ее в "культурный город" и ее увидит санкт-петербург</p>
+      </div>
+  
+      <div class="partners-name">
+        <img src="/static/images/icon1.png" alt=""></img>
+        <h3>написать статью</h3>
+        <p>напишите статью, отправьте ее в "культурный город" и ее увидит санкт-петербург</p>
+      </div>
+  
   </div>
   
 
