change variable names to more comfortable in css\styles, base.html, index.html

--- a/app/static/css/mainfonts.css
+++ b/app/static/css/mainfonts.css
@@ -11,8 +11,8 @@
 }
 /*  Font Awesome styles
     ------------------------------------------------------- */
-[class^="icon-"],
-[class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   font-family: SlotSSI;
   font-weight: normal;
   font-style: normal;
