--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,21 +24,19 @@
   <div class="top">
 <!--    <h4>Great New Deals in Shopping Festival this year. Get Discount upto 70%</h4> -->
     <h4>Культур мультур барабульдур кана мене ваза бла-бла. Такие дела.</h4>
-    <a class="btn mini">Владимир Ленин</a></div>
+    <p>Владимир Ленин</p></div>
   <div class="header">
     <div class="logo"> <img src="static/images/color-logo-Culture_City.png" alt=""></div>
-    <div class="contact">
      <!-- <h5><span class="phone"></span>Contact : 980.56.33.0</h5> -->
-      <div class="social">
+      <div class="menu">
         <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">О проекте</a></li>
-          <li><a href="#">Создать</a></li>
-          <li><a href="#">Читать</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="about.html">О проекте</a></li>
+          <li><a href="create.html">Создать</a></li>
+          <li><a href="read.html">Читать</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
         </ul>
       </div>
-    </div>
   </div>
 
 {% block content %} 
@@ -48,14 +46,14 @@
 
   <div class="block">
     <div class="footer">
-      <p class="footer-text">Copyright &copy; 2045 // Design by: <a href="http://www.vibethemes.com/">VibeThemes.com</a></p>
-      <div class="social">
+      <p class="footer-text">Copyright &copy; 2045 </p>
+      <div class="menu">
         <ul>
-          <li> <i class="icon-facebook-sign icon-2x"></i></li>
-          <li> <i class="icon-twitter-sign icon-2x"></i></li>
-          <li> <i class="icon-linkedin-sign icon-2x"></i></li>
-          <li> <i class="icon-pinterest-sign icon-2x"></i></li>
-          <li> <i class="icon-google-plus-sign icon-2x"></i></li>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">О проекте</a></li>
+          <li><a href="#">Создать</a></li>
+          <li><a href="#">Читать</a></li>
+          <li><a href="#">Контакты</a></li> 
         </ul>
       </div>
     </div>
