--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,19 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="main">
-      <div class="featured">
-        <div class="vendor">
-          <div class="flexslider mainslider">
+      <div class="slide-show">
             <img src="/static/images/waw1.png" alt="">
             <!--<ul>
               <li class="image"><img src="/static/images/waw.png" alt=""></li>
               <li class="image"><img src="/static/images/waw1.png" alt=""></li>
               <li class="image"><a href="#"><img src="/static/images/waw2.png" alt=""></a></li>
             </ul>-->
-        </div>
-      </div>
     </div>
-   <div class="main-signup">
+   <div class="main-description">
      <h2>Культурный город - </h2>
      <h4>&emsp; - город, который делают люди</h4>
      <p>Напишите свою стать, отправьте ее в "Культурный город" и ее прочитает Санкт-Петербург</p>
