add read article page, style and environment code

--- a/app/static/css/stylemain.css
+++ b/app/static/css/stylemain.css
@@ -166,7 +166,7 @@ blockquote {
 
 .menu {
     float: right;
-    width: 400px;
+    width: 450px;
     font-size: 80%;
     opacity: 0.6;
     color:black;
@@ -466,6 +466,41 @@ blockquote {
     width: 960px;
     overflow:hidden; 
 }
+
+.articles {
+    width: 100%;
+    float:left;
+    background: #ffffff;
+}
+.articles h1 {
+    margin: 20px;
+}
+.articles a {
+    cursor: pointer;
+}
+
+.articles table {
+    text-align: left;
+    border-collapse: separate;
+    border: 1px solid #ddd;
+    border-spacing: 80px 10px;
+    border-radius: 3px;
+    background: #fdfdfd;
+    font-size: 14px;
+    width: 100%;
+}
+.articles td,th {
+    padding-left: 0px;
+    
+}
+
+.get-article {
+    overflow:hidden;
+}
+.get-article p {
+    text-align:center;
+}
+
 
 /*form {
     display:block;
