--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -16,6 +16,7 @@
        <p>Set you name:<br>{{form.author_name}}</p>
        <p>Set article name:<br>{{form.article_name}}</p>
        <p>Set your email:<br>{{form.email}}</p>
+       <!--Add cleaning form after send article to database -->
       <!-- <p>Set you name:<br><input type="text" name="author_name"></p>
        <p>Set article_name:<br><input type="text" name="article_name"></p>
        <p>Set email:<br><input type="text" name="email"></p> -->
