change save_reguest_data function, add tablestyle class

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel='stylesheet' type='text/css' href="{{ url_for('static', filename='css/mainfonts.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/stylemain.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/tablestyle.css') }}">
 <!--<link rel="stylesheet" href="{{ url_for('static', filename='css/touchTouch.css') }}"> -->
 <!--<link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}"> -->
 <!--[if lt IE 9]>
