--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,8 @@
   <div class="tagline">
     <h1>Давайте делать город лучше</h1>
     <p>Когда вы делаете что то для других, от этого становится лучше вам</p>
-    <p>Когда другие делают что то для вас - от этого становится лучше вам. Давайте делать для других, и другие начнут делать для вас</p>
+    <p>Когда другие делают что то для вас - от этого становится лучше вам</p>
+    <p>Давайте делать для других, и другие начнут делать для вас</p>
   </div>
     <div class="block">
       <div class="feature">
