add IntegrityError check, display table

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,8 @@
     <h1>Давайте делать город лучше</h1>
     <p>Когда вы делаете что то для других, от этого становится лучше вам</p>
     <p>Когда другие делают что то для вас - от этого становится лучше вам</p>
-    <p>Давайте делать для других, и другие начнут делать для вас</p>
+   <!-- <p>Давайте делать для других, и другие начнут делать для вас</p> -->
+   <p>Давайте делать так, чтобы становилось лучше</p>
   </div>
     <div class="block">
       <div class="feature">
