--- a/app/templates/read.html
+++ b/app/templates/read.html
@@ -2,14 +2,7 @@
 {% block content %}
   <div class="articles">
     <h1>User Articles </h1>
-   <!-- <ul>
-   {% for record in records %}
-      <li>author - {{record.author_name}}</li>
-      <li>article - {{record.article_name}}</li>
-      <li>add date - {{record.date}}</li>
-      <li><a href="get_file.html?filename={{record.file_name}}">View article</a></li><br>
-    {% endfor %}
-    </ul> -->
+    <div class="table" cellspacing='0'>
   <table>
     <tr>
       <th>Author name</th>
@@ -22,10 +15,11 @@
       <td>{{record.author_name}}</td>
       <td>{{record.article_name}}</td>
       <td>{{record.date}}</td>
-      <td><a href="get_file.html?filename={{record.file_name}}">View article</a></td>
+      <td style="text-align:center;"><a href="get_file.html?filename={{record.file_name}}">View article</a></td>
     </tr>
     {% endfor %}
   </table>
+    </div>
   </div>
 {% endblock %}
 
