--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,13 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-
 <div class="about">
-<h1>Проект "Культурный город" </h1>
-<p>был основан в 2000000 году двумя зрелыми ребятами из новоселецка. Каждый день они вели образ жизни, ели пили отдыхали а потом подумали что можно взять и сделать такой вот проект. Ну и сделали. И теперь хорошо. По крайней мере так хорошо что нормико-парамико. И дальше будет еще лучше, еще больше, еще интереснее. Потому что цена всему этому - страсть, любовь, дружба и прочий тарарам. Вообщем любите друг друга и будьте щастливы. Все будет точно точно хорошо.</p>
+  <h1>Проект "Культурный город" - </h1>
+  <p> Проект, нацеленный на улучшение культурного уровня жизни людей, улучшения их культурного окружения.</p>
+  <p>В окружающем пространстве "рекламного содержимого" Культурный город намерен разбавить этот контент интересной,</p>
+  <p>полезной информацией, которой горожане смогут делиться друг с другом </p>
+  <div class="block">
+    <h1 style="margin: 20px;">Функционирование проекта</h1>
+    <p><img src="/static/images/about.png" alt="about"></img>
+  </div>
+  <h1>Идейность проект</h1>
+    <p>"Культурный город" разбавляет окружающий рекламный контент,но не предоставляет его</p>
+    <p>"Культурный город" делают люди</p>
+    <p>"Культурный город" за развитие</p>
+    <p>"Культурный город" объединяет людей</p>
+    <p>"Культурный город" чтит традиции</p>
+    <p>"Культурный город" что то еще</p>
+    <p>"Культурный город" еще что нибудь</p>
+    <p>"Культурный город" еще что то</p>
 </div>
-
-
 
 {% endblock %}
