--- a/app/templates/get_file.html
+++ b/app/templates/get_file.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="get-article">
-  <!--<p><img src="{{ url_for('static', filename='images/dart.jpg') }}" alt="Письма мастера дзен"></p> -->
-  <p><img src="/static/filestorage/{{filename}}" alt="{{filename}}"></p>
+  <p><img src="{{ url_for('static', filename='filestorage/tiger2.jpg') }}" alt="Письма мастера дзен"></p>
+  <p><img src="/home/e.sergeev/culture-city/app/static/filestorage/tiger1.pnrg" alt="bla"></p>
+    <p><img src="/static/filestorage/{{filename}}" alt="{{filename}}"></p> 
   </div>
 
 
