--- a/app/static/css/mainfonts.css
+++ b/app/static/css/mainfonts.css
@@ -9,6 +9,16 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+    font-family: 'Panton-Bold';
+    src: url('../fonts/Panton-Black.otf');
+  src: url('../fonts/slot_ssi?#iefix&v=3.0.1') format('embedded-opentype'),
+/*    url('../fonts/Panton-ExtraBlack.woff?v=3.0.1') format('woff'),
+    url('../fonts/Panton-ExtraBlack.ttf?v=3.0.1') format('truetype'); /*
+  font-weight: normal;
+  font-style: normal;
+}
 /*  Font Awesome styles
     ------------------------------------------------------- */
 [class^='icon-'],
