--- a/app/static/css/stylemain.css
+++ b/app/static/css/stylemain.css
@@ -155,41 +155,60 @@ blockquote {
 
 /*==========Theme header==========*/
 .header {
-    margin-top: 40px;
+    margin-top: 50px;
     height: 100px;
 }
 
 .logo {
     float: left;
-    width: 300px;
+    width: 250px;
 }
+
+/*#navigation {
+    float: right;
+    width: 500px;
+    font-size: 18px;
+    color:black;
+    margin-top: 20px;
+} */
 
 .menu {
-    float: right;
-    width: 450px;
-    font-size: 80%;
-    opacity: 0.6;
-    color:black;
-}
-
-.menu ul {
-    margin: 10px;
-    padding: 4px;
     float:right;
+    width:500px;
+    font-size:18px;
+    color:black;
+    margin-top:20px;
+} 
+.menu #navigation {
+    float:right;
+
 }
 
-.menu ul, li {
+#navigation ul, li {
     margin: 15px;
     margin-right:0px;
     padding: 0;
     display:inline;
 }
-.menu ul,li a {
+#navigation ul,li a {
     text-decoration:none;
     font-family: 'Panton';
     color:black;
 }
+ 
+#navigation li a:hover, #navigation li .active_menu{
+    color: #f99600;
 
+}
+/*.menu li a.hover {
+    color: #000;
+}
+.menu li.active a {
+    color: #f99600;
+} */
+.active {
+    color:#f99600;
+}
 
 .facebook {
     background:url('../images/iconpack/fb.png') no-repeat left top;
@@ -300,6 +319,10 @@ blockquote {
 /*==========end buttons==========*/
 
 
+/*========== forms =============*/
+
+/*========= end forms =========*/
+
 
 /*==========block==========*/
 .block {
@@ -382,11 +405,12 @@ blockquote {
 
 .tagline h1 {
     text-transform: uppercase;
-    font-family:'Panton'
+    font-family:'Panton-Bold';
 }
 .tagline p {
     line-height: 20px;
     font-family:'Panton';
+    margin:10px
 
 }
 /*=============end tagline=============*/
@@ -406,7 +430,7 @@ blockquote {
     background: #FAF9F5;
     color: #666666;
     padding: 10px 0;
-    font-family: 'Panton';
+    font-family: 'Panton-Bold';
     margin-bottom: 20px;
 }
 
@@ -415,12 +439,13 @@ blockquote {
 }
 
 .feature img {
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     color: #666666;
     opacity: 0.6;
-}
 
+}
+/*====== index blocks =======*/
 .partners {
     background:#FFFFFF;
     float:left;
@@ -436,8 +461,22 @@ blockquote {
 
 .partners-name {
     text-align:center;
-    float:left;
-    width: 300px;
+    width: 30.3%;
+    margin:10px;
+    display: inline-block;
+}
+.partners-name img {
+    width:100px;
+    height:100px;
+    overflow:hidden;
+    opacity: 0.6;
+}
+.partners-name img:hover {
+    opacity: 1;
+}
+.partners-name h3 {
+    margin: 20px;
+
 }
 
 .about {
@@ -449,22 +488,47 @@ blockquote {
 .rules {
     width: 400px;
     float:left;
-
+    margin:20px;
+}
+.rules p{
+    font-size: 20px;
+    line-height:30px;
+    text-align:justify;
 }
 
 .send-form {    
-    width: 400px;
-    float:left;
-}
-.send-form p {
-    width: 300px;
+    width: 350px;
+    float:right;
+    margin:20px;
 }
 
-.bla-bla {
-    background:#ffffff;
-    position:relative; /*fuck how does it works?*/
-    width: 960px;
-    overflow:hidden; 
+.send-form h2 {
+    margin-bottom:10px;
+}
+.send-form p {
+    display: block;
+
+}
+.send-form input {
+    float:right;
+    clear:both;
+}
+
+.send-form form input[type="text"] {
+    font-size: 12px;
+    background: #fff;
+    color: #888;
+    padding: 10px 10px 10px 10px;
+    width: 300px; /*is it wrong way? yes it is!!! */
+    border: 1px solid #ebeae5;
+    font-family:'Panton';
+    margin-left: 0px;
+    float:left;
+}
+/*is it wrong way??? */
+.send-form label {
+    float:right;
+    margin-bottom:20px;
 }
 
 .articles {
@@ -527,3 +591,5 @@ textarea {
 }
 
 /*==========end footer==========*/
+
+
