--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -1,27 +1,52 @@
 {% extends "base.html" %}
-
 {% block content %}
+
 <div class="block">
   <div class="rules">
-    <h1>Это правил написания статьи</h1>
+    <h1>Правила написания статьи</h1>
     <p>Чтобы статью написать нада сделать вот так:</p>
     <p>Раз два три - </p>
-    <p>Елочка - гориииииииииииииии</p>
+    <p>Елочка - гориииии</p>
+    <p>Уииииииииииииии</p>
+    <p>Правило номер один:</p>
+    <p>Ты не можешь причинить вред человеку или своим бездействием</p>
+    <p>допустить чтобы человеку был причинен вред</p>
+    <p>Правило номер два:</p>
+    <p>Ты должен повиноваться всем приказам, которые дает человек,</p>
+    <p>если они не противоречат первому закону</p>
+    <p>Правило номер три:</p>
+    <p>Ты волен заботится о своей безопасноти ровно в той мере,</p>
+    <p>В которой это не противоречит первым двум законам</p>
   </div>
 
   <div class="send-form">
-    <h1>Вы можете отправить нам уже готовую статью</h1>
+    <h2>Вы можете отправить нам уже готовую статью</h2>
      <form action="/create.html" method="POST" enctype="multipart/form-data">
         {{form.hidden_tag()}}
-       <p>Set you name:<br>{{form.author_name}}</p>
-       <p>Set article name:<br>{{form.article_name}}</p>
-       <p>Set your email:<br>{{form.email}}</p>
+       <p>Введите ваше Имя:</p>
+       {{ form.author_name(class="send-form") }}
+        {% for error in form.errors.author_name %}
+        <span style="color:red;">{{error}}</span>
+        {% endfor %}
+       <p>Введите название статьи:</p>
+       {{ form.article_name(class="send-form") }}
+        {% for error in form.errors.article_name %}
+        <span style="color:red">{{error}}</span>
+        {% endfor %}
+       <p>Введите ваш электронный адрес:</p>
+       {{ form.email(class="send-form") }}
+        {% for error in form.errors.email %}
+        <span style="color:red">{{error}}</span>
+        {% endfor %}
        <!--Add cleaning form after send article to database -->
-      <!-- <p>Set you name:<br><input type="text" name="author_name"></p>
+      <!--<p>Set you name:<br><input type="text" name="author_name"></p>
        <p>Set article_name:<br><input type="text" name="article_name"></p>
        <p>Set email:<br><input type="text" name="email"></p> -->
-      <p>Add file:<input type="file" name="userfile"></p>
-       <p><input type="submit" value="Add file"></p>
+      <!--<div class="file_upload"><p>Выбрать файл<input type="file" name="userfile"></p> </div>
+       <p><input type="submit" value="Add file" class="btn red"></p> -->
+       <input type="file" id="upload" name="userfile"/>
+       <label for='upload' class="btn yellow">Открыть статью</label>
+      <input type="submit" value="Отправить статью" class="btn red">
        </form>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -32,14 +57,10 @@
             </ul>
              {% endif %}
              {% endwith %}
-        {% for error in form.errors %}
-        <span style="color:red">{{error}}</span>
-        {% endfor %}
   </div>
   </div>
-  <div class="create-form">
- <!-- <iframe frameborder="0" src="http://mega-photoshop.ru/fotoshop_onlajn.html" height="950px" width="100%" ></iframe><br/> -->
+<!--  <div class="create-form">
+  <iframe frameborder="0" src="http://mega-photoshop.ru/fotoshop_onlajn.html" height="950px" width="100%" ></iframe><br/> -->
   </div>
-
 
 {% endblock %}
