--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+
   <div class="main">
       <div class="slide-show">
             <img src="/static/images/waw1.png" alt="">
@@ -19,29 +20,29 @@
   </div>
   <div class="tagline">
     <h1>Давайте делать город лучше</h1>
-    <p>Когда вы делаете что то для других, от этого становится лучше вам</p>
-    <p>Когда другие делают что то для вас - от этого становится лучше вам</p>
+    <p>Напишите интересную статью для другого!</p>
+    <p>Другой напишет интересную статью для вас!</p>
    <!-- <p>Давайте делать для других, и другие начнут делать для вас</p> -->
-   <p>Давайте делать так, чтобы становилось лучше</p>
+   <p>Интересная стаья будет размещена у наших рекламных партнеров</p>
   </div>
     <div class="block">
       <div class="feature">
-        <img src="/static/images/icon1.png" alt=""></img>
+        <img src="/static/images/write.png" alt="write"></img>
         <h3>Написать статью</h3>
         <p>Напишите статью, отправьте ее в "Культурный город" и ее увидит Санкт-Петербург</p>
       </div>
       <div class="feature">
-        <img src="/static/images/icon2.png" alt=""></img>
+        <img src="/static/images/about.png" alt="about"></img>
         <h3>О проекте</h3>
         <p>Как функционирует проект, основые его состоявляющей деятельности</p>
       </div>
       <div class="feature">
-        <img src="/static/images/icon3.png" alt=""></img>
-        <h3>Читать Статьи</h3>
+        <img src="/static/images/read.png" alt="read"></img>
+        <h3>Читать</h3>
         <p>Прочитайте статьи, которые написали соотечественники. Это интересно</p>
       </div>
       <div class="feature">
-        <img src="/static/images/icon4.png" alt=""></img>
+        <img src="/static/images/contacts.png" alt="contacts"></img>
         <h3>Наши контакты</h3>
         <p>Вы посмотрели сайт и у вас остались вопросы? Пишите нам и мы с радостью вам ответим</p>
       </div>
@@ -49,23 +50,32 @@
   <div class="partners">
     <h1>Наши партнеры</h1>
       <div class="partners-name">
-        <img src="/static/images/icon1.png" alt=""></img>
-        <h3>написать статью</h3>
-        <p>напишите статью, отправьте ее в "культурный город" и ее увидит санкт-петербург</p>
+        <img src="/static/images/ghost_hunter.jpg" alt=""></img>
+        <h3>Охотники за приведениями</h3>
       </div>
   
       <div class="partners-name">
-        <img src="/static/images/icon1.png" alt=""></img>
-        <h3>написать статью</h3>
-        <p>напишите статью, отправьте ее в "культурный город" и ее увидит санкт-петербург</p>
+        <img src="/static/images/mortal-kombat.png" alt=""></img>
+        <h3>Мертвый комбат</h3>
       </div>
   
       <div class="partners-name">
-        <img src="/static/images/icon1.png" alt=""></img>
-        <h3>написать статью</h3>
-        <p>напишите статью, отправьте ее в "культурный город" и ее увидит санкт-петербург</p>
+        <img src="/static/images/south_park.png" alt=""></img>
+        <h3>Южный парк</h3>
       </div>
   
+      <div class="partners-name">
+        <img src="/static/images/google.jpg" alt=""></img>
+        <h3>Google</h3>
+      </div>
+      <div class="partners-name">
+        <img src="/static/images/NASA_logo.svg.png" alt=""></img>
+        <h3>NASA</h3>
+      </div>
+      <div class="partners-name">
+        <img src="/static/images/playboy-symbol.jpg" alt=""></img>
+        <h3>PlayBoy</h3>
+      </div>
   </div>
   
 
