--- a/app/templates/get_file.html
+++ b/app/templates/get_file.html
@@ -30,7 +30,7 @@
       <input name="name" type="text">
     <p>Your email:</p>
       <input name="email" type="text">
-      <input type="hidden" name="bla" value="{{id}}">
+      <input type="hidden" name="art_id" value="{{id}}">
     <input type="button" onclick="sendPost(this.form)" value="Отправить">
     </form>
     {% endif %}
